# ckb-mcp

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  IMPLEMENTATION_STATUS.md  PROMPTS.md  README.md  TEMP_SPEC_ckb-ai-mcp-migration.md  TEST_AUDIT.md  docker-compose.yml
.config/: nextest.toml
.github/workflows/: docker-build.yml
crates/ckb-ai-mcp/: Cargo.toml
crates/ckb-ai-mcp/src/: capabilities.rs  main.rs  middleware.rs  server.rs  util.rs
crates/ckb-ai-mcp/src/ckb/: handlers.rs  mod.rs  tools.rs
crates/ckb-ai-mcp/src/dev/: handlers.rs  mod.rs  tools.rs
crates/ckb-ai-mcp/src/docs/: handlers.rs  mod.rs  resources.rs
crates/ckb-ai-mcp/src/jsonrpc/: handler.rs  mod.rs  types.rs
crates/ckb-ai-mcp/src/prompts/: definitions.rs  handlers.rs  mod.rs
crates/ckb-ai-mcp/src/rpc/: handlers.rs  mod.rs  tools.rs
crates/ckb-ai-mcp/src/search/: handlers.rs  mod.rs  tools.rs
crates/ckb-ai-mcp/tests/: 00_phase_tests.rs  ckb_tool_tests.rs  dev_tool_tests.rs  docs_resource_tests.rs  prompt_tests.rs  rpc_tool_tests.rs  search_tool_tests.rs
crates/ckb-ai-mcp/tests/common/: mod.rs
crates/ckb-docs-server/: Cargo.toml  build.rs
crates/ckb-docs-server/src/: docs.rs  handlers.rs  main.rs
crates/ckb-docs-server/tests/: 00_phase_tests.rs  integration.rs  mcp_protocol.rs  phase_tests.rs  resource_api_tests.rs  resource_validation.rs
crates/ckb-rpc-server/: Cargo.toml  build.rs
crates/ckb-rpc-server/src/: handlers.rs  main.rs  rpc.rs
crates/ckb-rpc-server/tests/: advanced_queries.rs  block_tests.rs  block_validation.rs  cell_indexer_tests.rs  header_epoch_tests.rs  integration.rs  mcp_error_tests.rs  mcp_protocol.rs  mempool_tests.rs  network_mining_tests.rs  phase_tests.rs  transaction_tests.rs
crates/ckb-tools-server/: Cargo.toml  README.md  build.rs
crates/ckb-tools-server/src/: client.rs  handlers.rs  main.rs  session.rs  tools.rs
crates/ckb-tools-server/tests/: 00_phase_tests.rs  account_info_tests.rs  balance_tests.rs  chain_info_tests.rs  chunked_deployment_tests.rs  deployment_tests.rs  faucet_tests.rs  integration.rs  lock_info_tests.rs  mcp_error_tests.rs  mcp_protocol.rs  phase_tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: ckb_client.rs  error.rs  lib.rs  mcp.rs  params.rs  server.rs  stats.rs  types.rs
crates/shared/tests/common/: mod.rs
crates/test-common/: Cargo.toml
docker/: docker-compose.production.yml  docker-compose.shepherd.yml  docker-compose.staging.yml  docker-compose.watchtower.yml  supervisord.conf
docs/: ai-quick-reference.md
docs/api-reference/: ccc-api-patterns.md  ccc-sdk-cross-chain.md  ccc-sdk-ssri.md  ckb-rust-sdk-practical-examples.md  cota-sdk-examples.md  ickb-sdk-examples.md  molecule-api-examples.md  omnilock-api-examples.md  omnilock-ethereum-example.md  sdk-examples-and-patterns.md  spore-sdk-examples.md  syscalls-quick-ref.md  well-known-hashes.md  xudt-minting-example.md
docs/concepts/: advanced-cell-concepts.md  cell-lifecycle.md  cell-model.md  ckb-network-history.md  ckb-syscalls-and-sources.md  header-dependencies-and-time-access.md  lock-value-relationships.md  lock-values.md  molecule-serialization.md  network-history.md  programming-model.md  script-groups-and-execution.md  script-groups.md  syscalls.md  transaction-lifecycle.md  transaction-structure.md
docs/concepts-for-coding/: cell-lifecycle.md  transaction-lifecycle.md
docs/cota/: development.md  infrastructure.md  protocol.md  sdk-examples.md
docs/dao/: patterns-advanced.md  patterns-basic.md
docs/deployment/: binary-deployment.md  cota-infrastructure.md
docs/ecosystem/: file-storage.md  project-directory.md
docs/education/: interactive-courses.md
docs/examples/: calculate_file_hashes.py  consolidate_cells.py  deploy_cell_data.py
docs/fiber/: channels.md  cross-chain-hub.md  invoices-and-payments.md  node-setup.md  on-chain-scripts.md  overview.md  routing-and-graph.md  rpc-reference.md  udt-channels.md
docs/getting-started/: developer-resources-and-tooling.md  offckb-development-workflow.md  tool-recommendations.md
docs/ickb/: debugging.md  development.md  liquidity.md  protocol.md
docs/integration-examples/: cell-collection-automation.md
docs/omnilock/: development.md  errors.md  ethereum-example.md  interoperability.md  protocol.md
docs/patterns/: c-to-rust-script-migration.md  cell-collection-automation.md  cobuild-integration-guide.md  cobuild-integration.md  contract-workspace-development.md  cota-nft-development.md  dao-development-patterns.md  development-tools-and-templates.md  development-tools-guide.md  dob-development.md  file-storage-patterns.md  ickb-development.md  ickb-liquidity-patterns.md  minimal-lock-script.md  minimal-type-script-pattern.md  minimal-type-script.md  molecule-schema-development.md  omnilock-development.md  omnilock-interoperability.md  operation-detection.md  proxy-lock-patterns.md  rust-script-development-patterns.md  script-development-patterns.md  seed-cell-pattern.md  simple-transfer.md  spore-development.md  ssri-implementation.md  system-scripts-and-core-patterns.md  token-creation-guide.md  token-creation.md  transaction-building-patterns.md  type-id-pattern.md  udt-tokens-guide.md  udt-tokens.md
docs/protocols/: ckbfs-protocol.md  ckbfs.md  cobuild.md  cota-protocol.md  ickb-protocol.md  omnilock-protocol.md  open-transaction.md  rgb-plus-plus.md  spore-digital-objects.md  spore-protocol.md  ssri.md  xudt-protocol.md  xudt.md
docs/quickstart/: ai-quick-reference.md  developer-resources.md  getting-started.md  tool-recommendations.md
docs/reference/: lock-script-hashes.md  protocol-script-hashes.md  syscalls-quick-ref.md  system-script-hashes.md  token-script-hashes.md
docs/scripts/: c-migration.md  lock-script-minimal.md  patterns.md  rust-patterns.md  rust-testing.md  script-sources.md  system-scripts.md  system-security.md
docs/sdk/: ccc-api.md  ccc-cross-chain.md  ccc-ssri.md  ickb-sdk.md  lumos-patterns.md  molecule-schema.md  rust-sdk-advanced.md  (+2 more)
utils/: README.md  extract_descriptions.py  verify_descriptions.py
(+26 files in other folders)
