[workspace]
resolver = "2"
members = [
	"crates/shared",
	"crates/test-common",
	"crates/ckb-rpc-server",
	"crates/ckb-docs-server",
	"crates/ckb-tools-server",
]

[workspace.dependencies]
# Async runtime and HTTP server
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["tower-log", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP client for CKB RPC
reqwest = { version = "0.11", features = ["json"] }

# Async streams
tokio-stream = { version = "0.1", features = ["sync"] }

# Random number generation
rand = "0.8"

# Embedded key-value database for stats persistence
redb = "2.0"

# Testing utilities
tempfile = "3.14"

# MCP protocol (using rust-mcp-sdk as placeholder - may need to adjust based on actual crate)
# rust-mcp-sdk = "0.1"

# Workspace crates
shared = { path = "crates/shared" }
test-common = { path = "crates/test-common" }