[workspace]
resolver = "2"
members = [
	"crates/shared",
	"crates/ckb-ai-mcp",
]

[workspace.dependencies]
# Async runtime and HTTP server
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.6", features = ["derive"] }

# HTTP client for CKB RPC
reqwest = { version = "0.13", features = ["json"] }

# Async streams
tokio-stream = { version = "0.1", features = ["sync"] }

# Random number generation
rand = "0.10"

# Embedded key-value database for stats persistence
redb = "4.1"

# Testing utilities
tempfile = "3.27"

# Workspace crates
shared = { path = "crates/shared" }
