[package]
name = "ckb-ai-mcp"
version = "1.6.1"
edition = "2024"
description = "Unified MCP server for CKB blockchain development"
license = "MIT"

[[bin]]
name = "ckb-ai-mcp"
path = "src/main.rs"

[dependencies]
# MCP Protocol
rmcp = { version = "0.14", features = [
	"server",
	"macros",
	"transport-streamable-http-server",
] }

# Web Framework
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.44", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
http-body = "1.0.1"
http-body-util = "0.1.3"
bytes = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"

# CKB (upgraded to 5.0.0 with CKB 1.0.x crates)
ckb-sdk = "5.0"
ckb-types = "1.0"
ckb-jsonrpc-types = "1.0"
ckb-hash = "1.0"
secp256k1 = "0.30"
hex = "0.4"

# Utilities
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
reqwest = { version = "0.12.26", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4"] }

# Shared crate
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
