[package]
name = "ckb-docs-server"
version = "0.4.158"
edition = "2021"

[[bin]]
name = "ckb-docs-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serial_test = "3.2"

[build-dependencies]
sysinfo = "0.30"