[package]
name = "ckb-docs-server"
version = "1.0.20"
edition = "2021"

[[bin]]
name = "ckb-docs-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
test-common = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
sysinfo = "0.30"