[package]
name = "ckb-rpc-server"
version = "0.4.612"
edition = "2021"

[[bin]]
name = "ckb-rpc-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
test-common = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
sysinfo = "0.30"