[package]
name = "ckb-tools-server"
version = "0.4.419"
edition = "2021"

[[bin]]
name = "ckb-tools-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }

# CKB dependencies
ckb-sdk = "4.4.0"
ckb-types = "0.202.0"
ckb-jsonrpc-types = "0.202.0"
ckb-hash = "0.202.0"
hex = "0.4"
secp256k1 = "0.29.1"

[dev-dependencies]
test-common = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
sysinfo = "0.30"